--- a/superset/tools/k8s/local/values.yaml
+++ b/superset/tools/k8s/local/values.yaml
@@ -49,7 +49,7 @@ serviceAccount:
 # @default -- see `values.yaml`
 bootstrapScript: |
   #!/bin/bash
-  pip install trino=0.328.0 && \
+  pip install trino==0.328.0 && \
   if [ ! -f ~/bootstrap ]; then echo "Running Superset with uid {{ .Values.runAsUser }}" > ~/bootstrap; fi
 
 # -- The name of the secret which we will use to generate a superset_config.py file
